syntax = "proto3";

option go_package = "github.com/yoRyuuuuu/typex/proto";

service Game {
    rpc Connect (ConnectRequest) returns (ConnectResponse) {}
    rpc Stream(stream Request) returns (stream Response) {}
}

message Player {
    string id = 1;
    string name = 2;
    int64 health = 3;
}

message ConnectRequest {
    string name = 1;
}

message ConnectResponse {
    string id = 1;
    repeated Player player = 2;
}

message Start {}

message Finish {
    string winner = 1;
}

message Join {
    Player player = 1;
}

message Attack {
    string text = 1;
    string target_id = 2;
}

message Question {
    string text = 1;
}

message Damage {
    string id = 1;
    int64 health = 2;
}

message Request {
    oneof action {
        Attack attack = 1;
    }
}

message Response {
    oneof event {
        Question question = 1;
        Start start = 2;
        Finish finish = 3;
        Join join = 4;
        Damage damage = 5;
    }
}